--- a/my-app/package.json
+++ b/my-app/package.json
@@ -14,6 +14,8 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "axios": "^1.3.3",
+    "flowbite": "^1.6.3",
+    "flowbite-react": "^0.4.1",
     "formik": "^2.2.9",
     "heroicons": "^2.0.16",
     "qs": "^6.11.0",
