--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tinymce/tinymce-react": "^4.3.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.12",
     "@types/react": "^18.0.28",
@@ -24,10 +25,12 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-spring-lightbox": "^1.7.1",
     "react-toastify": "^9.1.1",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
+    "tailwind-scrollbar": "^3.0.0",
     "tailwindcss": "^3.2.7",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
