--- a/my-app/package.json
+++ b/my-app/package.json
@@ -19,6 +19,7 @@
     "flowbite-react": "^0.4.1",
     "formik": "^2.2.9",
     "heroicons": "^2.0.16",
+    "jwt-decode": "^3.1.2",
     "qs": "^6.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
